:lipstick: fix gap in modeles page

--- a/src/page/ContactPage.css
+++ b/src/page/ContactPage.css
@@ -14,19 +14,7 @@
 }
 
 .form {
-    background-color: white;
-    padding: 3.125em;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
-    max-width: 500px;
-    max-height: 600px;
-    margin-left: 7%;
-    margin-right: 7%;
     margin-top: 2%;
-    text-align: center;
   }
   
   .contactTitle {
